--- a/ChatSystem/src/Chat/client/view/registration/Registration.fxml
+++ b/ChatSystem/src/Chat/client/view/registration/Registration.fxml
@@ -55,20 +55,22 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <PasswordField fx:id="password" layoutX="194.0" layoutY="148.0" prefHeight="29.0" prefWidth="389.0" />
+            <PasswordField fx:id="password" layoutX="194.0" layoutY="122.0" prefHeight="27.0" prefWidth="389.0" />
             <TextField fx:id="userName" layoutX="194.0" layoutY="80.0" prefHeight="27.0" prefWidth="389.0" />
-            <Label layoutX="139.0" layoutY="199.0" text="By registration you accept our rulebook that can be found in 'About'" />
+            <Label layoutX="139.0" layoutY="210.0" text="By registration you accept our rulebook that can be found in 'About'" />
             <Label layoutX="14.0" layoutY="85.0" text="Username (max. 128 char)" />
-            <Label layoutX="14.0" layoutY="154.0" text="Password (4-24 char)" />
-            <Button fx:id="resetButton" layoutX="274.0" layoutY="277.0" mnemonicParsing="false" onAction="#resetData" prefHeight="27.0" prefWidth="92.0" text="Reset" />
-            <Button fx:id="registerButton" layoutX="274.0" layoutY="234.0" mnemonicParsing="false" onAction="#createAccount" prefHeight="27.0" prefWidth="92.0" text="Register" />
-            <Button fx:id="cancelButton" layoutX="274.0" layoutY="319.0" mnemonicParsing="false" onAction="#backToLogin" prefHeight="27.0" prefWidth="92.0" text="Cancel" />
+            <Label layoutX="14.0" layoutY="128.0" text="Password (4-24 char)" />
+            <Button fx:id="resetButton" layoutX="274.0" layoutY="288.0" mnemonicParsing="false" onAction="#resetData" prefHeight="27.0" prefWidth="92.0" text="Reset" />
+            <Button fx:id="registerButton" layoutX="274.0" layoutY="245.0" mnemonicParsing="false" onAction="#createAccount" prefHeight="27.0" prefWidth="92.0" text="Register" />
+            <Button fx:id="cancelButton" layoutX="274.0" layoutY="330.0" mnemonicParsing="false" onAction="#backToLogin" prefHeight="27.0" prefWidth="92.0" text="Cancel" />
             <Label layoutX="305.0" layoutY="29.0" />
             <Label layoutX="200.0" layoutY="18.0" text="Welcome to Chat!">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
+            <PasswordField fx:id="passwordrep" layoutX="194.0" layoutY="159.0" prefHeight="27.0" prefWidth="389.0" />
+            <Label layoutX="14.0" layoutY="164.0" text="Repeat password" />
          </children>
     </AnchorPane>
   </children>
