--- a/ChatSystem/src/Chat/client/view/commonchat/CommonChat.fxml
+++ b/ChatSystem/src/Chat/client/view/commonchat/CommonChat.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.commonchat.CommonChatController">
    <children>
       <MenuBar VBox.vgrow="NEVER">
          <menus>
@@ -60,8 +64,17 @@
             </Label>
             <SplitPane dividerPositions="0.7241379310344828" layoutY="-1.0" prefHeight="372.0" prefWidth="640.0">
                <items>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                     <children>
+                        <TextArea fx:id="commonChatArea" prefHeight="334.0" prefWidth="459.0" />
+                        <TextField fx:id="messageField" layoutY="343.0" prefHeight="16.0" prefWidth="349.0" />
+                        <Button layoutX="381.0" layoutY="343.0" mnemonicParsing="false" onAction="#onSendButton" text="Send" />
+                     </children></AnchorPane>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                     <children>
+                        <ListView layoutX="-1.0" layoutY="27.0" prefHeight="308.0" prefWidth="174.0" />
+                        <Label layoutX="54.0" layoutY="5.0" text="Active Users" />
+                     </children></AnchorPane>
                </items>
             </SplitPane>
          </children>
