--- a/Chat/client/view/registration/Registration.fxml
+++ b/Chat/client/view/registration/Registration.fxml
@@ -4,7 +4,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.layout.BorderPane?>
+
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.registration.RegistrationController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -54,7 +56,7 @@
             <Label layoutX="14.0" layoutY="128.0" text="Password (4-24 char)" />
             <Button fx:id="resetButton" layoutX="274.0" layoutY="288.0" mnemonicParsing="false" onAction="#resetData" prefHeight="27.0" prefWidth="92.0" text="Reset" />
             <Button fx:id="registerButton" layoutX="274.0" layoutY="245.0" mnemonicParsing="false" onAction="#createAccount" prefHeight="27.0" prefWidth="92.0" text="Register" />
-            <Button fx:id="cancelButton" layoutX="274.0" layoutY="330.0" mnemonicParsing="false" onAction="#backToLogin" prefHeight="27.0" prefWidth="92.0" text="Cancel" />
+            <Button fx:id="cancelButton" layoutX="274.0" layoutY="330.0" mnemonicParsing="false" onAction="#onCancel" prefHeight="27.0" prefWidth="92.0" text="Cancel" />
             <Label layoutX="305.0" layoutY="29.0" />
             <Label layoutX="200.0" layoutY="18.0" text="Welcome to Chat!">
                <font>
@@ -63,6 +65,9 @@
             </Label>
             <PasswordField fx:id="passwordrep" layoutX="194.0" layoutY="159.0" prefHeight="27.0" prefWidth="389.0" />
             <Label layoutX="14.0" layoutY="164.0" text="Repeat password" />
+             <BorderPane prefHeight="126.0" prefWidth="424.0">
+                 <Label fx:id="errorLabel" prefHeight="17.0" prefWidth="319.0" text="Error label" BorderPane.alignment="CENTER" />
+             </BorderPane>
          </children>
     </AnchorPane>
   </children>
