--- a/Chat/client/view/login/Login.fxml
+++ b/Chat/client/view/login/Login.fxml
@@ -19,7 +19,7 @@
                </font>
             </Label>
             <Button layoutX="187.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="104.0" text="Enter as guest" />
-            <Button layoutX="186.0" layoutY="337.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="104.0" text="Create account" />
+            <Button layoutX="186.0" layoutY="337.0" mnemonicParsing="false" onAction="#onRegisterRequest" prefHeight="35.0" prefWidth="104.0" text="Create account" />
             <Label layoutX="162.0" layoutY="307.0" text="Do not have an account yet?" />
             <PasswordField fx:id="passwordField" layoutX="163.0" layoutY="147.0" />
             <TextField fx:id="usernameField" layoutX="163.0" layoutY="99.0" />
