--- a/Chat/client/view/login/Login.fxml
+++ b/Chat/client/view/login/Login.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<AnchorPane prefHeight="390.0" prefWidth="483.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.login.LoginController">
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+
+<AnchorPane prefHeight="390.0" prefWidth="483.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.login.LoginController">
    <children>
       <Pane prefHeight="400.0" prefWidth="474.0">
          <children>
@@ -23,6 +23,7 @@
             <Label layoutX="162.0" layoutY="307.0" text="Do not have an account yet?" />
             <PasswordField fx:id="passwordField" layoutX="163.0" layoutY="147.0" />
             <TextField fx:id="usernameField" layoutX="163.0" layoutY="99.0" />
+            <Label fx:id="loginErrorLabel" layoutX="58.0" layoutY="346.0" text="Label" textFill="RED" />
          </children>
       </Pane>
    </children>
