--- a/Chat/client/view/registration/Registration.fxml
+++ b/Chat/client/view/registration/Registration.fxml
@@ -27,7 +27,7 @@
          <children>
             <PasswordField fx:id="password" layoutX="194.0" layoutY="122.0" prefHeight="27.0" prefWidth="389.0" />
             <TextField fx:id="userName" layoutX="194.0" layoutY="80.0" prefHeight="27.0" prefWidth="389.0" />
-            <Label layoutX="139.0" layoutY="210.0" text="By registration you accept our rulebook that can be found in 'About'" />
+            <Label layoutX="139.0" layoutY="210.0" text="By registering you accept the terms and conditions that can be found in 'About us'" />
             <Label layoutX="14.0" layoutY="85.0" text="Username (max. 128 char)" />
             <Label layoutX="14.0" layoutY="128.0" text="Password (4-24 char)" />
             <Button fx:id="resetButton" layoutX="274.0" layoutY="288.0" mnemonicParsing="false" onAction="#resetData" prefHeight="27.0" prefWidth="92.0" text="Reset" />
