Fixed the view for the Profile.fxml. Tested it as a guest user and its functionalities are working, still need the database to fully test it though

--- a/Chat/client/view/commonchat/CommonChat.fxml
+++ b/Chat/client/view/commonchat/CommonChat.fxml
@@ -20,7 +20,7 @@
             <Menu mnemonicParsing="false" text="Settings">
                <items>
                   <MenuItem mnemonicParsing="false" text="About us" />
-                  <MenuItem mnemonicParsing="false" text="My profile" />
+                  <MenuItem mnemonicParsing="false" onAction="#openUpProfile" text="My profile" />
                </items>
             </Menu>
          </menus>
