--- a/Chat/client/view/login/Login.fxml
+++ b/Chat/client/view/login/Login.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane prefHeight="390.0" prefWidth="483.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.login.LoginController">
    <children>
-      <Pane prefHeight="400.0" prefWidth="474.0">
+      <Pane layoutX="-9.0" prefHeight="400.0" prefWidth="483.0">
          <children>
             <Button layoutX="198.0" layoutY="200.0" mnemonicParsing="false" onAction="#onLoginButton" prefHeight="35.0" prefWidth="83.0" text="Log in">
                <font>
@@ -23,7 +23,7 @@
             <Label layoutX="162.0" layoutY="307.0" text="Do not have an account yet?" />
             <PasswordField fx:id="passwordField" layoutX="163.0" layoutY="147.0" />
             <TextField fx:id="usernameField" layoutX="163.0" layoutY="99.0" />
-            <Label fx:id="loginErrorLabel" layoutX="58.0" layoutY="346.0" text="Label" textFill="RED" />
+            <Label fx:id="loginErrorLabel" layoutX="14.0" layoutY="378.0" text="Label" textFill="RED" />
          </children>
       </Pane>
    </children>
