--- a/Chat/client/view/profile/Profile.fxml
+++ b/Chat/client/view/profile/Profile.fxml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="479.0" prefWidth="494.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.profile.ProfileController">
+<AnchorPane prefHeight="479.0" prefWidth="494.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.profile.ProfileController">
    <children>
-      <Label layoutX="212.0" layoutY="8.0" text="Profile">
+      <Label layoutX="199.0" layoutY="14.0" text="Profile">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="36.0" layoutY="70.0" text="Username" />
-      <TextField fx:id="username" layoutX="145.0" layoutY="65.0" prefHeight="27.0" prefWidth="325.0" />
-      <TextField fx:id="password" accessibleRole="PASSWORD_FIELD" layoutX="145.0" layoutY="105.0" prefHeight="27.0" prefWidth="325.0" />
-      <TextField fx:id="firstName" layoutX="145.0" layoutY="145.0" prefHeight="27.0" prefWidth="325.0" />
-      <TextField fx:id="lastName" layoutX="145.0" layoutY="185.0" prefHeight="27.0" prefWidth="325.0" />
-      <TextField fx:id="age" layoutX="145.0" layoutY="225.0" prefHeight="27.0" prefWidth="325.0" />
-      <Label layoutX="36.0" layoutY="110.0" text="Password" />
-      <Label layoutX="36.0" layoutY="150.0" text="First name" />
-      <Label layoutX="36.0" layoutY="190.0" text="Last name" />
-      <Label layoutX="36.0" layoutY="230.0" text="Age" />
-      <Label layoutX="36.0" layoutY="270.0" text="Profile name" />
+      <Label layoutX="36.0" layoutY="110.0" text="Username" />
+      <TextField fx:id="username" layoutX="144.0" layoutY="105.0" prefHeight="27.0" prefWidth="325.0" />
+      <TextField fx:id="password" accessibleRole="PASSWORD_FIELD" layoutX="144.0" layoutY="145.0" prefHeight="27.0" prefWidth="325.0" />
+      <TextField fx:id="firstName" layoutX="144.0" layoutY="185.0" prefHeight="27.0" prefWidth="325.0" />
+      <TextField fx:id="lastName" layoutX="144.0" layoutY="225.0" prefHeight="27.0" prefWidth="325.0" />
+      <TextField fx:id="age" layoutX="144.0" layoutY="265.0" prefHeight="27.0" prefWidth="325.0" />
+      <Label layoutX="36.0" layoutY="150.0" text="Password" />
+      <Label layoutX="36.0" layoutY="190.0" text="First name" />
+      <Label layoutX="36.0" layoutY="230.0" text="Last name" />
+      <Label layoutX="36.0" layoutY="270.0" text="Age" />
       <Button fx:id="updateButton" layoutX="401.0" layoutY="420.0" mnemonicParsing="false" onAction="#onUpdate" prefHeight="38.0" prefWidth="68.0" text="Update" />
       <Button fx:id="cancelButton" layoutX="36.0" layoutY="420.0" mnemonicParsing="false" onAction="#onCancel" prefHeight="38.0" prefWidth="68.0" text="Cancel" />
       <Label layoutX="36.0" layoutY="310.0" text="E-mail address" />
       <Label layoutX="36.0" layoutY="350.0" text="Phone number" />
-      <TextField fx:id="profileName" layoutX="144.0" layoutY="265.0" prefHeight="27.0" prefWidth="325.0" />
       <TextField fx:id="PhoneNumber" layoutX="144.0" layoutY="345.0" prefHeight="27.0" prefWidth="325.0" />
       <TextField fx:id="eMailAddress" layoutX="144.0" layoutY="305.0" prefHeight="27.0" prefWidth="325.0" />
       <Label fx:id="errorLabel" layoutX="131.0" layoutY="385.0" prefHeight="27.0" prefWidth="248.0" text="Label" textFill="RED" />
