--- a/Chat/client/view/login/Login.fxml
+++ b/Chat/client/view/login/Login.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="390.0" prefWidth="483.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.login.LoginController">
+<AnchorPane prefHeight="390.0" prefWidth="483.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.login.LoginController">
    <children>
       <Pane layoutX="-9.0" prefHeight="400.0" prefWidth="483.0">
          <children>
