--- a/Chat/client/view/registration/Registration.fxml
+++ b/Chat/client/view/registration/Registration.fxml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.registration.RegistrationController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.registration.RegistrationController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -33,7 +26,7 @@
             <Button fx:id="resetButton" layoutX="274.0" layoutY="288.0" mnemonicParsing="false" onAction="#resetData" prefHeight="27.0" prefWidth="92.0" text="Reset" />
             <Button fx:id="registerButton" layoutX="274.0" layoutY="245.0" mnemonicParsing="false" onAction="#createAccount" prefHeight="27.0" prefWidth="92.0" text="Register" />
             <Button fx:id="cancelButton" layoutX="274.0" layoutY="330.0" mnemonicParsing="false" onAction="#onCancel" prefHeight="27.0" prefWidth="92.0" text="Cancel" />
-            <Label fx:id="errorLabel" layoutX="31.0" layoutY="321.0" prefHeight="18.0" prefWidth="148.0" textFill="RED" />
+            <Label fx:id="errorLabel" layoutX="14.0" layoutY="335.0" prefHeight="18.0" prefWidth="254.0" textFill="RED" />
             <Label layoutX="193.0" layoutY="23.0" text="Welcome to Chat!">
                <font>
                   <Font size="32.0" />
