--- a/Chat/client/view/commonchat/CommonChat.fxml
+++ b/Chat/client/view/commonchat/CommonChat.fxml
@@ -43,7 +43,7 @@
                      </children></AnchorPane>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                      <children>
-                        <ListView fx:id="activeUsersList" layoutX="-1.0" layoutY="27.0" prefHeight="293.0" prefWidth="174.0" />
+                        <ListView fx:id="activeUsersList" layoutX="-1.0" layoutY="27.0" onMouseClicked="#onClickUser" prefHeight="293.0" prefWidth="174.0" />
                         <Label layoutX="70.0" layoutY="6.0" text="Users" />
                      </children></AnchorPane>
                </items>
