--- a/Chat/client/view/userinfo/UserInfo.fxml
+++ b/Chat/client/view/userinfo/UserInfo.fxml
@@ -22,7 +22,7 @@
       <Label layoutX="36.0" layoutY="190.0" text="Last name" />
       <Label layoutX="36.0" layoutY="230.0" text="Age" />
       <Label layoutX="36.0" layoutY="270.0" text="Profile name" />
-      <Button fx:id="updateButton" layoutX="372.0" layoutY="445.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="96.0" text="Private chat" />
+      <Button layoutX="372.0" layoutY="445.0" mnemonicParsing="false" onAction="#onPrivateChatButton" prefHeight="38.0" prefWidth="96.0" text="Private chat" />
       <Button fx:id="cancelButton" layoutX="35.0" layoutY="445.0" mnemonicParsing="false" onAction="#onCancel" prefHeight="38.0" prefWidth="68.0" text="Cancel" />
       <Label layoutX="36.0" layoutY="310.0" text="E-mail address" />
       <Label layoutX="36.0" layoutY="350.0" text="Phone number" />
