--- a/Chat/client/view/privatechat/PrivateChat.fxml
+++ b/Chat/client/view/privatechat/PrivateChat.fxml
@@ -2,14 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<?import javafx.scene.control.TextField?>
 <AnchorPane prefHeight="432.0" prefWidth="388.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Chat.client.view.privatechat.PrivateChatController">
    <children>
       <Button layoutX="327.0" layoutY="391.0" mnemonicParsing="false" onAction="#onSendButton" text="Send" />
-      <Button layoutX="14.0" layoutY="391.0" mnemonicParsing="false" onAction="#onExitButton" text="Exit chat" />
+      <Button fx:id="exitButton" layoutX="14.0" layoutY="391.0" mnemonicParsing="false" onAction="#onExitButton" text="Exit chat" />
       <TextArea fx:id="privateChatTextArea" layoutX="14.0" layoutY="14.0" prefHeight="308.0" prefWidth="361.0" />
       <TextField fx:id="privateChatMessageField" layoutX="14.0" layoutY="334.0" prefHeight="43.0" prefWidth="361.0" />
    </children>
