--- a/Chat/client/view/profile/Profile.fxml
+++ b/Chat/client/view/profile/Profile.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,22 +14,24 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="36.0" layoutY="110.0" text="Username" />
-      <TextField fx:id="username" layoutX="144.0" layoutY="105.0" prefHeight="27.0" prefWidth="325.0" />
-      <TextField fx:id="password" accessibleRole="PASSWORD_FIELD" layoutX="144.0" layoutY="145.0" prefHeight="27.0" prefWidth="325.0" />
-      <TextField fx:id="firstName" layoutX="144.0" layoutY="185.0" prefHeight="27.0" prefWidth="325.0" />
-      <TextField fx:id="lastName" layoutX="144.0" layoutY="225.0" prefHeight="27.0" prefWidth="325.0" />
-      <TextField fx:id="age" layoutX="144.0" layoutY="265.0" prefHeight="27.0" prefWidth="325.0" />
-      <Label layoutX="36.0" layoutY="150.0" text="Password" />
-      <Label layoutX="36.0" layoutY="190.0" text="First name" />
-      <Label layoutX="36.0" layoutY="230.0" text="Last name" />
-      <Label layoutX="36.0" layoutY="270.0" text="Age" />
+      <Label layoutX="33.0" layoutY="86.0" text="Username" />
+      <TextField fx:id="username" layoutX="141.0" layoutY="81.0" prefHeight="27.0" prefWidth="325.0" />
+      <TextField fx:id="password" accessibleRole="PASSWORD_FIELD" layoutX="141.0" layoutY="121.0" prefHeight="27.0" prefWidth="325.0" />
+      <TextField fx:id="firstName" layoutX="141.0" layoutY="161.0" prefHeight="27.0" prefWidth="325.0" />
+      <TextField fx:id="lastName" layoutX="141.0" layoutY="201.0" prefHeight="27.0" prefWidth="325.0" />
+      <TextField fx:id="age" layoutX="141.0" layoutY="241.0" prefHeight="27.0" prefWidth="325.0" />
+      <Label layoutX="33.0" layoutY="126.0" text="Password" />
+      <Label layoutX="33.0" layoutY="166.0" text="First name" />
+      <Label layoutX="33.0" layoutY="206.0" text="Last name" />
+      <Label layoutX="33.0" layoutY="246.0" text="Age" />
       <Button fx:id="updateButton" layoutX="401.0" layoutY="420.0" mnemonicParsing="false" onAction="#onUpdate" prefHeight="38.0" prefWidth="68.0" text="Update" />
       <Button fx:id="cancelButton" layoutX="36.0" layoutY="420.0" mnemonicParsing="false" onAction="#onCancel" prefHeight="38.0" prefWidth="68.0" text="Cancel" />
-      <Label layoutX="36.0" layoutY="310.0" text="E-mail address" />
-      <Label layoutX="36.0" layoutY="350.0" text="Phone number" />
-      <TextField fx:id="PhoneNumber" layoutX="144.0" layoutY="345.0" prefHeight="27.0" prefWidth="325.0" />
-      <TextField fx:id="eMailAddress" layoutX="144.0" layoutY="305.0" prefHeight="27.0" prefWidth="325.0" />
-      <Label fx:id="errorLabel" layoutX="131.0" layoutY="385.0" prefHeight="27.0" prefWidth="248.0" text="Label" textFill="RED" />
+      <Label layoutX="33.0" layoutY="286.0" text="E-mail address" />
+      <Label layoutX="33.0" layoutY="326.0" text="Phone number" />
+      <TextField fx:id="PhoneNumber" layoutX="141.0" layoutY="321.0" prefHeight="27.0" prefWidth="325.0" />
+      <TextField fx:id="eMailAddress" layoutX="141.0" layoutY="281.0" prefHeight="27.0" prefWidth="325.0" />
+      <Label fx:id="errorLabel" layoutX="169.0" layoutY="425.0" prefHeight="27.0" prefWidth="164.0" text="Label" textFill="RED" />
+      <Label layoutX="33.0" layoutY="372.0" text="Status" />
+      <ChoiceBox fx:id="statusChoice" layoutX="141.0" layoutY="368.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
